Jython NEWS

For more details, please see https://hg.python.org/jython

Jython 2.7.1rc1
  Bugs fixed
    - [ 2521 ] Windows installation (all) fails on Windows 10
    - [ 2557 ] ongoing pain with platform detection via os.name and sys.platform
    - [ 1996 ] Core slots array out of bounds with multiple inheritance
    - [ 2101 ] Diamond-style multiple inheritance fails when using __slots__ on the second branch
    - [ 2552 ] installing scandir via pip fails (breaks e.g. installing pathlib2 via pip)
    - [ 2534 ] os.getlogin() returns a wrong user or returns an exception
    - [ 2553 ] sys.getwindowsversion not implemented (breaks pathlib on Windows)
    - [ PR55 ] Replace deprecated use of ASCII constant with ascii()
    - [ 1777 ] Help getting SymPy working with Jython
    - [ 2475 ] Backported python 3 pathlib and pathlib2 do not work b/c of meta class issues
    - [ 2551 ] __slots__ in diamond-style causes lay-out conflict (breaks pathlib and sympy)
    - [ 2550 ] test_list_jy fails on Java 8
    - [ 2549 ] test_posix fails on Linux
    - [ 2548 ] Unicode u'\N{name}' frequently broken, because ucnhash.dat outdated
    - [ 2527 ] cStringIO throws IllegalArgumentException with non-ASCII values
    - [ 2511 ] Percent operator calls __getattr__('__getitem__')
    - [ PR28 ] zipimporter supports multi-byte characters in pathnames
    - [ 2228 ] Re-use "makeCompiledFilename" function where possible
    - [ 608632 ] __doc__foo should accept java String
    - [ 2523 ] defaultdict.__getitem__() does not propagate exceptions raised by calling
               default_factory
    - [ 2522 ] defaultdict.__getitem__(unhashable) raises KeyError instead of TypeError
    - [ 2515 ] typing module doesn't import
    - [ 2538 ] Test failures in test_unittest
    - [ 2293 ] "java.lang.IllegalArgumentException: java.lang.IllegalArgumentException:
               Cannot create PyString with non-byte value" triggered after adding